--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div class="search-container">
-  <input type="text" id="search-input" placeholder="search blog posts..." style="width: 90%;
+  <input type="text" id="search-input" placeholder="在此处搜索博客..." style="width: 90%;
     height: 35px;
     color: #333;
     background-color: rgba(227,231,236,.2);
@@ -11,7 +11,8 @@ layout: default
     border: 1px solid #c0c0c0;
     font-size: 16px;
     font-weight: bold;
-    border-radius: 17px;
+<!--边界半径，17 -》 20 -->
+    border-radius: 20px;
     outline: none;
     box-sizing: border-box;
     box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102,175,233,.6);">
@@ -27,7 +28,7 @@ layout: default
 	resultsContainer: document.getElementById('results-container'),
 	json: '{{ site.baseurl }}/search.json',
 	searchResultTemplate: '<li><a href="{url}?query={query}" title="{desc}">{title}</a></li>',
-	noResultsText: 'No results found',
+	noResultsText: 'no such blog...',
 	limit: 10,
 	fuzzy: false,
 	exclude: ['Welcome']
